# satisfactory-pathfinder

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agent/: satisfactory-companion.md
crates/pathfinder-cli/: Cargo.toml  build.rs
crates/pathfinder-cli/src/: main.rs  output.rs
crates/pathfinder-cli/tests/: cli.rs
crates/pathfinder-core/: Cargo.toml
crates/pathfinder-core/src/: bottleneck.rs  calculator.rs  chain.rs  db.rs  lib.rs  models.rs  progress.rs
data/: items.json  logistics.json  machines.json  milestones.json  recipes.json  resources.json
install/: install.ps1  install.sh
skill/: satisfactory-companion.md
tools/: validate_data.js
