[package]
name = "pathfinder-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pathfinder"
path = "src/main.rs"

[dependencies]
pathfinder-core = { path = "../pathfinder-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
