[package]
name = "pathfinder-cli"
version = "0.0.0-dev"
edition = "2021"

[[bin]]
name = "pathfinder"
path = "src/main.rs"

[dependencies]
pathfinder-core = { path = "../pathfinder-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "3"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
